Fixed padding on mobile

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       .page-wrapper {
         padding: 0 2rem;
       }
+
+      ul {
+        padding-inline-start: 20px;
+      }
     }
 
     a:link,
