--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
     body {
       font-family: sans-serif;
       line-height: 1.5;
-      min-width: 300px;
+      min-width: 280px;
       margin: 0 auto;
-      background-color: #383838;
+      background-color: #252525;
       color: #d3d3d3;
     }
 
-    .page-wrapper,
-    footer {
-      max-width: 800px;
-      margin: 0 auto;
+    .page-wrapper {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    main {
+      flex: 1;
+      align-self: center;
     }
 
     @media only screen and (max-width: 799px) {
-      .page-wrapper {
-        padding: 0 2rem;
-      }
-
       ul {
-        padding-inline-start: 20px;
+        padding-inline-start: 30px;
       }
     }
 
@@ -46,6 +51,7 @@
       height: 3px;
       background: rgb(160,41,199);
       background: linear-gradient(90deg, rgba(160,41,199,1) 11%, rgba(166,0,184,1) 37%, rgba(81,108,220,1) 65%, rgba(0,212,255,1) 100%);
+      margin-bottom: 1.5rem;
     }
 
     .mark {
@@ -60,20 +66,29 @@
       margin-bottom: 10px;
     }
 
+    ul:last-of-type {
+      margin: 0;
+    }
+
     footer {
+      margin-top: 3rem;
       background: linear-gradient(90deg, rgba(160,41,199,1) 11%, rgba(166,0,184,1) 37%, rgba(81,108,220,1) 65%, rgba(0,212,255,1) 100%);
     }
 
     footer p {
-      padding: 0.3rem;
+      text-align: center;
+      padding: 0.5rem;
+      margin: 0;
     }
 
   </style>
 </head>
 <body>
   <div class="page-wrapper">
-    <h1>Learning path</h1>
-    <hr>
+    <header>
+      <h1>Learning path</h1>
+      <hr>
+    </header>
     <main>
       <ul>
         <li>
@@ -137,9 +152,9 @@
         </ul>
       </ul>
     </main>
+    <footer>
+      <p>&copy; kgogov 2020</p>
+    </footer>
   </div>
-  <footer>
-    <p>&copy; kgogov 2020</p>
-  </footer>
 </body>
 </html>
